testin some more with hasRole auth but the hasAuth get dosn't work it dosn't read the users role and permissions

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -8,6 +8,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+# Debug
+logging.level.org.springframework.security=DEBUG
 
 
 ### Spring logo ###
