--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/enterprise
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=crtneko
-spring.datasource.password=JK@@jk22
+spring.datasource.username=simon
+spring.datasource.password=jk@@JK22
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
